# shibabot

./: .env.example  .gitignore  Makefile  Pipfile  README.md  config.py  log.py  main.py  pyproject.toml  requirements.txt  wsgi.py
.github/workflows/: python-app.yml
application/: __init__.py
clients/: __init__.py  crypto.py  stock.py
handlers/: __init__.py  crypto.py  stock.py
shibabot/: __init__.py  api.py  charts.py  commands.py  events.py  log.py
