[tool.poetry]
name = "shibabot"
version = "0.1.0"
description = "Chatbot for Discord"
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/toddbirchard/shibabot/"
repository = "https://github.com/toddbirchard/shibabot/"
documentation = "https://github.com/toddbirchard/shibabot/"
keywords = [
    "Discord",
    "Bot",
    "Chatbot",
    "Python",
    "Discord Bot"
]

[tool.poetry.dependencies]
python = "^3.8"
discord = "*"
requests = "*"
loguru = "*"
pandas = "*"
plotly = "*"
chart-studio = "*"
wikipedia-api = "*"
imdbpy = "*"
emoji = "*"
python-dotenv = "*"

[tool.poetry.dev-dependencies]
pytest = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
run = "main:create_bot"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/shibabot/issues"
