[tool.poetry]
name = "shibabot"
version = "0.1.0"
description = "Chatbot for Discord"
authors = ["Todd Birchard <toddbirchard@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/toddbirchard/shibabot/"
repository = "https://github.com/toddbirchard/shibabot/"
documentation = "https://github.com/toddbirchard/shibabot/"
keywords = [
    "Discord",
    "Bot",
    "Chatbot",
    "Python",
    "Discord Bot"
]

[tool.poetry.dependencies]
python = "^3.9"
discord = "*"
requests = "*"
loguru = "*"
pandas = "*"
plotly = "*"
chart-studio = "*"
wikipedia-api = "*"
imdbpy = "*"
emoji = "*"
python-dotenv = "*"
uwsgi = "*"

[tool.poetry.dev-dependencies]
pytest = "*"
mypy = "*"
black = "21.10b0"
isort = "5.10.1"
flake8 = "^4.0.1"

[tool.poetry.scripts]
run = "wsgi:start"

[tool.poetry.urls]
issues = "https://github.com/toddbirchard/shibabot/issues"

[build-system]
requires = ["poetry>=1.1.11"]
build-backend = "poetry.masonry.api"

